test/invalid_confs/invalid_noarray.lua
--ERROR: array member is not allowed
Listen "8080" {
	ssl = { 123 },
	echo = "hello",
}
